--- a/12306hsd/package.json
+++ b/12306hsd/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
     "element-plus": "^2.3.14",
+    "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
@@ -19,7 +20,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0"
   },
   "browserslist": [
     "> 1%",
